# Detect_Object

./: .gitignore  CMakeLists.txt  README.md  package.xml
launch/: sim_balloon.launch  sim_doorframe.launch  simulation.launch
models/CircularFrame/: model.config  model.sdf
models/RedBall/: model.config
models/SquareFrame/: model.config  model.sdf
models/TriangularFrame/: model.config  model.sdf
models/redball/: model.sdf
sh/: balloon.sh  sim_balloon.sh  sim_cam_balloon.sh  sim_doorframe.sh
src/: detect_balloon.cpp  detect_doorframe.cpp
